--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@
 li {
 
 	color: white;
-	font-family: 'Open Sans', sans-serif;
+/*	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
 	font-size: 14pt;
 	color: black;
 	text-shadow: -2px -1px 0px rgba(255, 255, 255, 1);
-	list-style-type: none;
+	list-style-type: none; */
 	
 }
 
