--- a/style.css
+++ b/style.css
@@ -1,52 +1,47 @@
 /* style 
 */
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,700,400);
 
 
 li {
 
-	color: white;
-/*	font-family: 'Open Sans', sans-serif;
-	font-weight: 400;
-	font-size: 14pt;
-	color: black;
-	text-shadow: -2px -1px 0px rgba(255, 255, 255, 1);
-	list-style-type: none; */
-	
+	color: white;	
 }
 
-h1 {
+h1,
+h2,
+h3,
+h4,
+h5 {
 	
 	font-family: 'Open Sans', sans-serif;
-	font-weight: 800;
-	color: black;
-	text-shadow: -2px -1px 0px rgba(255, 255, 255, 1);
+	font-weight: 700;
+	color: white;
+	padding: 0;
+	margin: 0;
 	
 }
 
-
-#player {
-	position: absolute;
-/*	border: 2px dotted red; /* visual help */
+body {
+	background-color: rgba(51,51,51,1);
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
+	color: white;
 }
 
 #header {
 	position: relative;
 	z-index: 10;
-	margin-top: 20px;
-	margin-left: 20px;
 /*	border: 2px dotted red; /* visual help */
 }
 
 #menu {
+	padding-top:10%;
+	text-align: left;
 	z-index: 10;
 	/* margin-top: auto;
 	margin-left: 20px;*/
-	position: absolute;
-	top: 0px;
-	right: 0px;
-	background-color: black;
 	color: white;
 	font-size: 10pt;
 /*	border: 2px dotted red; /* visual help */
@@ -61,18 +56,11 @@ h1 {
 /*	border: 2px dotted orange; */
 }
 
-video {
-
+#middle {
+	text-align: left;
 	position: fixed;
 	top: 50%;
-    	left: 50%;
-    	min-width: 100%;
-    	min-height: 100%;
-    	width: auto;
-    	height: auto;
-    	z-index: -100;
-    	-webkit-transform: translateX(-50%) translateY(-50%);
-    	transform: translateX(-50%) translateY(-50%);
-    	background: url(example.jpg) no-repeat;
-    	background-size: cover;	
+	left: 50%;
+	-webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
 }
